Refactor expiring key value storage (#2)
Co-authored-by: Ivan Ponomarev <iponomarev@mail.ru>